Fixed an issue with Fleet.cpp, Updated platform toolset to v143, Update README to include how to generate a certificate to run project

--- a/.gitignore
+++ b/.gitignore
@@ -30,3 +30,15 @@
 *.exe
 *.out
 *.app
+
+# Misc build files
+build/.vs/*
+build/packages/*
+
+source/Game.Universal/bin/*
+source/Game.Universal/Generated Files/*
+source/Game.Universal/obj/*
+
+source/Library.Windows/bin/*
+source/Library.Windows/Generated Files/*
+source/Library.Windows/obj/*
